@@ -2,3 +2,5 @@
 20080820 code: added thin function layer to events, datasource, error, config
                to use ada string/integer/boolean types.
 20080821 version: agar-core-ada 0.11
+20080821 code: removed init_video from agar.core (to be placed in agar.gui)
+20080821 code: more ada-typed functions.
